--- a/index.html
+++ b/index.html
@@ -12,20 +12,19 @@
 <body>
     <form class="container">
         <label for="avp1">Nota AVP1</label>
-        <input type="number" id="avp1" name="avp1">
+        <input type="number" id="avp1" name="avp1" step="0.010">
         <label for="avp2">Nota AVP2</label>
-        <input type="number" id="avp2">
+        <input type="number" id="avp2" step="0.010">
         <!-- TDES -->
         <label for="tde1">Nota TDE1</label>
-        <input type="number" id="tde1" name="tde1">
-        <label for="tde2">Nota TDE2</label>
-        <input type="number" id="tde2" name="tde2">
-        <label for="tde3">Nota TDE3</label>
-        <input type="number" id="tde3" name="tde3">
-        <label for="tde4">Nota TDE4</label>
-        <input type="number" id="tde4">
-
-        <div class="form-footer">
+        <input type="number" id="tde1" name="tde1" step="0.010">
+        <label for=" tde2">Nota TDE2</label>
+        <input type="number" id="tde2" name="tde2" step="0.010">
+        <label for=" tde3">Nota TDE3</label>
+        <input type="number" id="tde3" name="tde3" step="0.010">
+        <label for=" tde4">Nota TDE4</label>
+        <input type="number" id="tde4" step="0.010">
+        <div class=" form-footer">
             <input type="reset" value="Limpar">
             <input type="submit" value="Calcular">
         </div>
