--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <title>Calculadora de Média | UNIFAPCE</title>
-
-    <!-- Font Awesome para os ícones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>Calculadora de Média | UNIFAPCE</title>
 </head>
 
 <body>
@@ -21,7 +19,6 @@
         <label for="avp2">Nota AVP2 <span class="required">*</span></label>
         <input type="number" id="avp2" name="avp2" step="0.010" required>
 
-        <!-- TDES -->
         <label for="tde1">Nota TDE1 <span class="required">*</span></label>
         <input type="number" id="tde1" name="tde1" step="0.010" required>
 
@@ -39,21 +36,19 @@
             <input type="submit" value="Calcular">
         </div>
 
-        <!-- Ícone de Informativo -->
         <div class="info-icon">
             <i class="fas fa-info-circle"></i>
             <div class="info-tooltip">As médias calculadas não incluem Projetos Integradores ou disciplinas EAD.</div>
         </div>
     </form>
 
-    <!-- Modal -->
     <div class="modal" id="modal">
         <div class="modal-content">
             <span class="close" id="close">&times;</span>
             <p id="result">Informe suas notas no formulário ao lado!</p>
         </div>
     </div>
-
+    <footer>© Desenvolvido por Evilyn Cordeiro | Base para Cálculos - Centro Universitário Paraíso, 2024.</footer>
     <script src="script.js"></script>
 </body>
 
