Add modal improvements, GIFs, and visual enhancements
Introduces dynamic GIFs based on results to enhance user feedback.
Redesigns modal styles with conditional formatting for different outcomes
and improves overall UI/UX with updated visuals and layout adjustments.

Updates footer information to reflect the current year and optimizes
background and container styles for better responsiveness and readability.

--- a/index.html
+++ b/index.html
@@ -42,13 +42,16 @@
         </div>
     </form>
 
+    <!-- Modal de resultado -->
     <div class="modal" id="modal">
         <div class="modal-content">
             <span class="close" id="close">&times;</span>
             <p id="result">Informe suas notas no formulário ao lado!</p>
+            <img id="gif" class="gif" src="" alt="Resultado">
         </div>
     </div>
-    <footer>© Desenvolvido por Evilyn Cordeiro | Base para Cálculos - Centro Universitário Paraíso, 2024.</footer>
+
+    <footer>© Desenvolvido por Evilyn Cordeiro | Base para Cálculos - Centro Universitário Paraíso, 2025.</footer>
     <script src="script.js"></script>
 </body>
 
